tests/NormalTests/paczka1/small_fuzzy/36562412.err
Error in line 1: 16baL9FE A637 68,1
Error in line 5: 16baL9FE S991 86,0
Error in line 11: 132Nnxei2q A637 65,8
